fix: (#15) fix particles on mobile

--- a/new-portfolio/src/components/about-me/about.scss
+++ b/new-portfolio/src/components/about-me/about.scss
@@ -45,7 +45,7 @@
 
 @media (max-width: 370px) {
   .abtCont {
-    padding: 3rem 0.5rem;
+    padding: 3rem 1rem;
     img {
       height: 300px;
     }
