--- a/new-portfolio/src/components/hero/hero.scss
+++ b/new-portfolio/src/components/hero/hero.scss
@@ -82,6 +82,7 @@
       width: 100%;
       padding: 1.69rem 1.31rem 6rem 1.31rem;
       .leftHero {
+        margin-top: 25px;
         p.hello {
           font-size: 1.2rem;
           line-height: 2.625rem;
