--- a/new-portfolio/src/components/projects/projects.scss
+++ b/new-portfolio/src/components/projects/projects.scss
@@ -88,7 +88,7 @@
 
 @media (max-width: 380px) {
   .flexWks {
-    padding: 3rem 0.5rem;
+    padding: 3rem 1rem;
     p.intTrext {
       font-size: 0.9rem;
     }
